--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
+    "no-alert": "off",
     "max-classes-per-file": ["error", 5]
   },
   "ignorePatterns": [
