--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "no-alert": "off",
+    "implicit-arrow-linebreak": "off",
     "max-classes-per-file": ["error", 5]
   },
   "ignorePatterns": [
